--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ defusedxml==0.7.1
 Django==5.0.3
 django-allauth==0.61.1
 django-crispy-forms==2.1
+django-environ==0.11.2
 idna==3.6
 oauthlib==3.2.2
 psycopg2-binary==2.9.9
