--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ Django==5.0.3
 django-allauth==0.61.1
 django-crispy-forms==2.1
 django-environ==0.11.2
+django-rosetta==0.10.0
 idna==3.6
 oauthlib==3.2.2
+polib==1.2.0
 psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
