--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,13 @@ Django==5.0.3
 django-allauth==0.61.1
 django-crispy-forms==2.1
 django-environ==0.11.2
+django-jalali-date==1.1.0
 django-rosetta==0.10.0
 idna==3.6
+jalali_core==1.0.0
+jdatetime==5.0.0
 oauthlib==3.2.2
+pillow==10.3.0
 polib==1.2.0
 psycopg2-binary==2.9.9
 pycparser==2.22
